8-April-2012 Michael Babker
~ Set MIME type with getID3 instead of params
~ Use JSession::checkToken()

31-March-2012 Michael Babker
# Fix folder processing in File Manager views

26-March-2012 Michael Babker
+ [#37] Add ability to override player height and width in content plugin
+ Option to handle loading of jQuery with media player if need be

25-March-2012 Michael Babker
+ Add MediaElements.JS (2.7.0)
~ Upgrade script removes old media

24-March-2012 Michael Babker
- Remove support for QuickTime, XSPF Flash, and SoundManager2 players
~ Content plugin errors are logged versus displayed to users

23-March-2012 Michael Babker
- Remove Minima template overrides due to frozen development on the template :-(

26-February-2012 Michael Babker
+ [#23] Allow the media player in the feed listing module
~ Upgrade script removes old language files

4-February-2012 Michael Babker
+ [#37] Add ability to override player in content plugin

20-January-2012 Michael Babker
~ Update pt-BR translation

19-January-2012 Michael Babker
~ Restore J! Version check to component scriptfile for BC

15-January-2012 Michael Babker
~ [#28] Make front end filtering field generic search
~ [#35] Update getID3 library to 1.9.3
~ [#10] Improvements to component router
~ [#11] Route feed link module through component router
~ Only run the content plugin in the site application
+ [#37] Button plugin now sets content syntax as {podcast id=XX} (BC change)

11-January-2012 Michael Babker
~ Update Live Update to 1.1
~ Set filterable states for admin list views
+ [#40] Add filters to Feeds list view
+ [#39] Add a boilerplate text option to feeds

8-January-2012 Michael Babker
+ Add SQLServer support

26-December-2011 Michael Babker
~ Improvements to podcastManagerBuildRoute

23-December-2011 Michael Babker
! Raise minimum version to Joomla! 2.5
+ Add Finder plugin for feeds
+ Add Finder plugin for podcasts

1-December-2011 Michael Babker
+ Add option to enable/disable logging
