@@ -33,9 +33,9 @@ class Com_PodcastManagerInstallerScript
 	 */
 	public function preflight($type, $parent)
 	{
-		// Requires Joomla! 2.5 (need this check because of earlier version use)
+		// Requires Joomla! 2.5.4 (need this check because of earlier version use)
 		$jversion = new JVersion;
-		if (version_compare($jversion->getShortVersion(), '2.5', 'lt'))
+		if (version_compare($jversion->getShortVersion(), '2.5.4', 'lt'))
 		{
 			JError::raiseNotice(null, JText::_('COM_PODCASTMANAGER_ERROR_INSTALL_JVERSION'));
 			return false;
