@@ -6,7 +6,7 @@
 PODMAN_TRANSLATED_BY="Translated by: Your Name <your@email.com> Optional Company Name (example.com)"
 PKG_PODCASTMANAGER="Podcast Manager Extension Package"
 PKG_PODCASTMANAGER_ERROR_DB_SUPPORT="This release of Podcast Manager is not compatible with your database driver."
-PKG_PODCASTMANAGER_ERROR_INSTALL_JVERSION="This release of Podcast Manager requires Joomla! 2.5 or newer"
+PKG_PODCASTMANAGER_ERROR_INSTALL_JVERSION="This release of Podcast Manager requires Joomla! 2.5.4 or newer"
 PKG_PODCASTMANAGER_XML_DESCRIPTION="Podcast Manager is a suite of extensions for Joomla! allowing users to host and produce podcast feeds from their site."
 
 ; Install Screen Strings (General)
