@@ -6,7 +6,7 @@
 PODMAN_TRANSLATED_BY="Traduzido por: OpenTranslators <info@opentranslators.org> OpenTranslators (opentranslators.org)"
 PKG_PODCASTMANAGER="Pacote de Extensões Podcast Manager"
 PKG_PODCASTMANAGER_ERROR_DB_SUPPORT="Este lançamento do Podcast Manager não é compatível com o driver de seu banco de dados."
-PKG_PODCASTMANAGER_ERROR_INSTALL_JVERSION="Esta lançamento do Podcast Manager requer Joomla! 2.5 ou mais recente"
+PKG_PODCASTMANAGER_ERROR_INSTALL_JVERSION="Esta lançamento do Podcast Manager requer Joomla! 2.5.4 ou mais recente"
 PKG_PODCASTMANAGER_XML_DESCRIPTION="Podcast Manager é um conjunto de extensões para Joomla! permitindo que os usuários hospedem e produzam feeds de podcast em seus sites."
 
 ; Install Screen Strings (General)
