@@ -1,6 +1,7 @@
 8-April-2012 Michael Babker
 ~ Set MIME type with getID3 instead of params
 ~ Use JSession::checkToken()
+! Raise minimum version to Joomla! 2.5.4
 
 31-March-2012 Michael Babker
 # Fix folder processing in File Manager views
